# DesignPatterns

./: .gitignore  Add.hpp  CMakeLists.txt  Factory.hpp  Factory.ipynb  Lab_instructions.md  Pow.hpp  README.md  Select_And.hpp  Select_Contains.hpp  Select_Not.hpp  Select_Or.hpp  add_test.hpp  base.hpp  div.hpp  div_test.hpp  iterator.cpp  main.cpp  mult_test.hpp  op.hpp  op_test.hpp  pow_test.hpp  rand.hpp  select.hpp  spreadsheet.cpp  sub_test.hpp  test.cpp  unit_test.cpp  visitor.hpp
FactoryPattern/: CMakeLists.txt  README.md  Sub.hpp  mult.hpp  op.hpp  testing.hpp  unit_test.cpp
MockClasses/: add_op_mock.hpp  eight_op_mock.hpp  negative_two_op_mock.hpp  three_op_mock.hpp  zero_op_mock.hpp
compositePattern/: Pow.hpp  base.hpp  div.hpp  main.cpp  mult.hpp  mult_test.hpp  op_test.hpp
compositePattern/MockClasses/: eight_op_mock.hpp
composite_Pattern/: Lab_instructions.md  Sub.hpp  add_test.hpp  div_test.hpp  rand.hpp
composite_Pattern/MockClasses/: negative_two_op_mock.hpp  three_op_mock.hpp  zero_op_mock.hpp
python/: Factory.py  Persons.py  README.md  Singleton.py
